Fix tag spacing on mobile

--- a/src/stylesheets/components/card.css
+++ b/src/stylesheets/components/card.css
@@ -54,4 +54,11 @@
   }
 }
 
+@media screen and (max-width: 780px) {
+  .project-list {
+    grid-template-columns: 1fr;
+    transition: 1s ease;
+  }
+}
+
 
