--- a/src/stylesheets/components/project_details.css
+++ b/src/stylesheets/components/project_details.css
@@ -4,7 +4,7 @@
 }
 .project-infos {
   display: grid;
-  grid-template-columns: 3fr 5fr 1fr 4fr;
+  grid-template-columns: 3fr 5fr 1fr 3fr;
   grid-gap: 24px;
   padding-top: 16px;
 }
@@ -27,14 +27,26 @@
 .container-categories-tags {
   margin-bottom: 14px;
   line-height: 2em;
-
 }
+/*.desktop {
+  display: inline-block;
+}*/
+.mobile {
+  display: none;
+}
+
 @media screen and (max-width: 780px) {
   .project-cover-img {
     height: calc((100vw - 48px) / 2);
   }
   .project-infos {
     grid-template-columns: 1fr 1fr;
+  }
+  .desktop {
+    display: none;
+  }
+  .mobile {
+    display: grid;
   }
 }
 
